// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetData Updater AssetData Updater: handles duplicate inserts/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [
    Object {
      "address_count": "20",
      "admin_address_id": null,
      "aggregate_block_id": 10,
      "amount": "500",
      "block_time": 15,
      "id": "1111111111111111111111111111111111111111",
      "issued": "31",
      "name_raw": "IM RAW AF",
      "owner": null,
      "precision": 4,
      "symbol": "OwO",
      "transaction_count": "25",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "transfer_count": "15",
      "type": "Token",
    },
    Object {
      "address_count": "15",
      "admin_address_id": null,
      "aggregate_block_id": 10,
      "amount": "500",
      "block_time": 15,
      "id": "2222222222222222222222222222222222222222",
      "issued": "60",
      "name_raw": "IM RAW AF",
      "owner": null,
      "precision": 4,
      "symbol": "OwO",
      "transaction_count": "20",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "transfer_count": "10",
      "type": "Token",
    },
  ],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`AssetData Updater AssetData Updater: handles insert/save 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [
    Object {
      "address_count": "20",
      "admin_address_id": null,
      "aggregate_block_id": 10,
      "amount": "500",
      "block_time": 15,
      "id": "1111111111111111111111111111111111111111",
      "issued": "31",
      "name_raw": "IM RAW AF",
      "owner": null,
      "precision": 4,
      "symbol": "OwO",
      "transaction_count": "25",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "transfer_count": "15",
      "type": "Token",
    },
    Object {
      "address_count": "15",
      "admin_address_id": null,
      "aggregate_block_id": 10,
      "amount": "500",
      "block_time": 15,
      "id": "2222222222222222222222222222222222222222",
      "issued": "60",
      "name_raw": "IM RAW AF",
      "owner": null,
      "precision": 4,
      "symbol": "OwO",
      "transaction_count": "20",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "transfer_count": "10",
      "type": "Token",
    },
  ],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`AssetData Updater AssetData Updater: handles reverting inputs/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [
    Object {
      "address_count": "20",
      "admin_address_id": null,
      "aggregate_block_id": 10,
      "amount": "500",
      "block_time": 15,
      "id": "1111111111111111111111111111111111111111",
      "issued": "31",
      "name_raw": "IM RAW AF",
      "owner": null,
      "precision": 4,
      "symbol": "OwO",
      "transaction_count": "25",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "transfer_count": "15",
      "type": "Token",
    },
    Object {
      "address_count": "15",
      "admin_address_id": null,
      "aggregate_block_id": 10,
      "amount": "500",
      "block_time": 15,
      "id": "2222222222222222222222222222222222222222",
      "issued": "60",
      "name_raw": "IM RAW AF",
      "owner": null,
      "precision": 4,
      "symbol": "OwO",
      "transaction_count": "20",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "transfer_count": "10",
      "type": "Token",
    },
  ],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`AssetData Updater AssetData Updater: handles reverting inputs/saves 2`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [
    Object {
      "address_count": "20",
      "admin_address_id": null,
      "aggregate_block_id": 10,
      "amount": "500",
      "block_time": 15,
      "id": "1111111111111111111111111111111111111111",
      "issued": "31",
      "name_raw": "IM RAW AF",
      "owner": null,
      "precision": 4,
      "symbol": "OwO",
      "transaction_count": "25",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "transfer_count": "15",
      "type": "Token",
    },
    Object {
      "address_count": "20",
      "admin_address_id": null,
      "aggregate_block_id": 11,
      "amount": "500",
      "block_time": 15,
      "id": "2222222222222222222222222222222222222222",
      "issued": "62",
      "name_raw": "IM RAW AF",
      "owner": null,
      "precision": 4,
      "symbol": "OwO",
      "transaction_count": "25",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "transfer_count": "15",
      "type": "Token",
    },
  ],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;

exports[`AssetData Updater AssetData Updater: handles reverting inputs/saves 3`] = `
Object {
  "action": Array [],
  "address": Array [],
  "addressToTransaction": Array [],
  "addressToTransfer": Array [],
  "asset": Array [
    Object {
      "address_count": "20",
      "admin_address_id": null,
      "aggregate_block_id": 10,
      "amount": "500",
      "block_time": 15,
      "id": "1111111111111111111111111111111111111111",
      "issued": "31",
      "name_raw": "IM RAW AF",
      "owner": null,
      "precision": 4,
      "symbol": "OwO",
      "transaction_count": "25",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "transfer_count": "15",
      "type": "Token",
    },
    Object {
      "address_count": "15",
      "admin_address_id": null,
      "aggregate_block_id": 10,
      "amount": "500",
      "block_time": 15,
      "id": "2222222222222222222222222222222222222222",
      "issued": "60",
      "name_raw": "IM RAW AF",
      "owner": null,
      "precision": 4,
      "symbol": "OwO",
      "transaction_count": "20",
      "transaction_hash": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "transaction_id": "2",
      "transfer_count": "10",
      "type": "Token",
    },
  ],
  "assetToTransaction": Array [],
  "block": Array [],
  "coin": Array [],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [],
  "transactionInputOutput": Array [],
  "transfer": Array [],
}
`;
